bugfix/OP-16323 alignment and space in pipeline builder page

--- a/packages/core/src/pipeline/config/pipelineConfig.less
+++ b/packages/core/src/pipeline/config/pipelineConfig.less
@@ -232,3 +232,23 @@ parameter,
   margin-left: 15px;
   width: calc(100% - 30px);
 }
+
+  @media (min-width: 600px) and (max-width: 1495px){
+    .width-100{
+      width: 100%;
+
+    }
+    .stage-head-left{
+    width: 21%;
+    float: left;
+  }
+  .stage-head-center{
+    width: 58.33%;
+    float: left;
+  }
+  .stage-head-right{
+    width: 20.66%;
+    float: left;
+  }
+  
+}
